# AI_PokeDex

./: README.md  pyproject.toml  requirements.txt
Backend/: back_server.py
CNN_Model_Code/: Pokedex_CNN_Model.ipynb
Frontend/: front_server.py  services.py
Work_dir/: Cnn_model.py  logger.py  main_pipeline.py  pokedex_agent.py
model/: pokedex_model.pth  updated_pokedex_model.pth
